Working on issue #13: Adding support for toggling the visibility of the task actions.

--- a/omniplan/public/stylesheets/style.css
+++ b/omniplan/public/stylesheets/style.css
@@ -24,3 +24,9 @@ a {
 	border-top-right-radius:4px;
 	border-bottom-left-radius:0;
 }
+
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
